# codedash

./: .gitignore  Cargo.toml  README.md  cli.lua  codedash-0.1.0-1.rockspec  codedash-0.2.0-1.rockspec  codedash-scm-1.rockspec  paths.lua  rustlib.json
.github/workflows/: update-badges.yml  update-schema.yml
codedash/: init.lua  std.lua  view.lua
codedash-schemas/: Cargo.toml  README.md
codedash-schemas/examples/: generate_schema.rs
codedash-schemas/schema/: ast-data.schema.json
codedash-schemas/src/: analyze.rs  lib.rs
codedash-schemas/src/snapshots/: codedash_schemas__analyze__schema_snapshot__analyze-result-schema.snap  codedash_schemas__schema_snapshot__ast-data-schema.snap
codedash/eval/: classify.lua  init.lua  loader.lua  lua_eval.lua  report.lua  settings.lua
codedash/lib/: range.lua
codedash/model/: binding.lua  index.lua  node.lua  normalizer.lua  percept.lua
codedash/presets/: indexes.lua  normalizers.lua  percepts.lua  recommended.lua
codedash/presets/indexes/: churn.lua  complexity.lua  coverage.lua  cyclomatic.lua  depth.lua  exported_score.lua  field_count.lua  lines.lua  params.lua
codedash/presets/normalizers/: percentile.lua  rank.lua
codedash/presets/percepts/: border.lua  clarity.lua  hue.lua  opacity.lua  presence.lua  size.lua  weight.lua
docs/: ci-setup.md
examples/: basic_run.lua  sample_enriched.json  sweep.lua
spec/: binding_spec.lua  classify_spec.lua  e2e_spec.lua  index_spec.lua  node_spec.lua  normalizer_spec.lua  percept_spec.lua  preset_spec.lua  range_spec.lua  settings_spec.lua
src/: lib.rs  main.rs
src/app/: analyze.rs  badge.rs  mod.rs
src/cli/: mod.rs
src/domain/: ast.rs  badge.rs  config.rs  enrichment.rs  mod.rs
src/infra/: coverage.rs  git.rs  mod.rs
src/infra/lua/: mod.rs  modules.rs  rustlib.rs
src/infra/parser/: mod.rs  registry.rs  rust.rs  typescript.rs
src/lua/: app.lua
src/port/: enricher.rs  mod.rs  parser.rs  schema.rs
tools/: enrich_generic.js  package.json  parse_rust.js  parse_tsx.js  viewer.html
