[package]
name = "codedash"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Code metrics visualization — single binary"
license = "MIT"
repository = "https://github.com/ynishi/codedash"
readme = "README.md"
keywords = ["code-metrics", "visualization", "ast", "analysis"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".busted",
    "cli.lua",
    "paths.lua",
    "rustlib.json",
    "codedash/",
    "codedash-*.rockspec",
    "examples/",
    "spec/",
    "tools/",
    "*.png",
]

[[bin]]
name = "codedash"
path = "src/main.rs"

[lib]
name = "codedash"
path = "src/lib.rs"

[dependencies]
# Lua runtime + CLI framework
senl = "0.4"

# AST parsing
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"

# Git enrichment
git2 = { version = "0.20", features = ["vendored-libgit2"] }

# Lua runtime (direct dependency for rustlib.rs)
mlua = { version = "0.10", features = ["lua54", "vendored"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
